Update and rename EE626_Stock_Price_Predictor.ipynb to LSTM_Stock_Price_Predictor.ipynb

--- a/LSTM_Stock_Price_Predictor.ipynb
+++ b/LSTM_Stock_Price_Predictor.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# EE626 Course Project - Stock Price Predictor\n",
+    "# IITG Course Project - Stock Price Predictor\n",
     "Predict the future closing value of a given stock using a dataset of past prices with a Long Short - Term Memory Recurrent Neural Network\n",
     "\n",
     "**Nishant Bhat - 180106032** <br>\n",
